Assassin's Creed Syndicate crashes with Mesa 21.3.0+ ACO
Description
The game launches correctly. After intro videos (Epilepsy, Ubisoft and warning_disclaimer) there are 2 loading screen. After these both loading screen, the game crashes when the main menu appears.
Steps to reproduce
See description part.
System information
- OS: Debian GNU/Linux
- GPU: AMD GPU Renoir (Ryzen 4600H) and AMD GPU RDNA2 6700XT
- Kernel version: Kernel 5.15
- Mesa version: Mesa 21.3.2 (tried with last Mesa-git, Mesa 21.2.6 and Mesa 21.3.0)
- Desktop environment: Gnome 3 version 41
If applicable
- Xserver version: X.Org X Server 1.20.13
- DXVK version: Latest git version
- Wine/Proton version: Wine 7.0-rc2
Regression
I did a regression test, Mesa 21.2.6 is the last version where the game works with ACO/LLVM backend and 21.3.0 which is the 1st version where the game crash.
The 1st bad commit found is :
f6f6f18e55537d6e3240d8c14e3f756e8d8fd75a is the first bad commit
commit f6f6f18e55537d6e3240d8c14e3f756e8d8fd75a
Author: Rhys Perry <pendingchaos02@gmail.com>
Date: Mon May 17 19:17:15 2021 +0100
radv: add pre-compiled vertex shader prologs for common states
This lets us pre-compile a prolog and avoid a hash table lookup during
command buffer recording, most of the time.
Signed-off-by: Rhys Perry <pendingchaos02@gmail.com>
Reviewed-by: Samuel Pitoiset <samuel.pitoiset@gmail.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/11717>
Edited by Maxime Lombard